Version 1.0
-------------------------------------------------------------------------
ggimage and ggmapplot are now based on geom_raster (new in ggplot2 as of version 0.9.0).  This affects the following changes :



Version 0.8
-------------------------------------------------------------------------
Changes - 
1. Further updated examples for a more efficient R CMD check.
2. ggmap now calls geocode (see below) for geocoding.
3. packages now load quietly.
4. grid now imported.
5. ggmap updated to ggplot2 version 0.9.0 which involved changes :
	1. legend = FALSE changed to guide = 'none' in ggimage, ggmapplot
	2. in ggimage examples, aesthetic "colour" changed to "colours"
	3. in ggmapplot examples, argument "to" in scale_size changed to "range"
6. .Internal calls in ggimage and ggmap for color conversion changed to simple rgb calls.

Additions - 
1. The geocoding subroutine of ggmap has been converted to its own function called geocode, which is exported.

Version 0.7
-------------------------------------------------------------------------
Changes - Examples not run at R CMD check.

Version 0.6
-------------------------------------------------------------------------
Changes - ggimage and ggmap now properly reshape using the reshape2 package.

Version 0.5
-------------------------------------------------------------------------
Changes - ggimage changed to display coord_equal by default.

Version 0.1
-------------------------------------------------------------------------
PACKAGE GENESIS.