@@ -15,7 +15,8 @@ Depends:
     ggplot2 (>= 0.9.0),
     plyr,
     reshape2,
-    grid
+    grid,
+    proto
 Suggests:
     MASS
 License: MIT
@@ -31,3 +32,4 @@ Collate:
     'qmap.R'
     'theme_nothing.R'
     'zips.R'
+    'geom-raster.R'
